Prevent table of contents overflow on top of the footer

--- a/components/insight/toc/SidebarRight.module.css
+++ b/components/insight/toc/SidebarRight.module.css
@@ -1,3 +1,13 @@
 .title {
-    margin: 10px 10px 20px 20px;
+    margin: 40px 10px 20px 20px;
+}
+
+.toc {
+    /* Max height = the screen height minus the header height */
+    max-height: calc(100vh - 62px);
+    /* If there is an overflow, add scroll bar */
+    overflow: auto;
+    /* Stick below header */
+    position: sticky;
+    top: 62px;
 }
